Adicionando paginas e produtos

--- a/pags/chaveiro.html
+++ b/pags/chaveiro.html
@@ -62,7 +62,7 @@
       </div>
     
     <div class="container mb-5">
-      <div class="row">
+      <div class="row mb-5">
         <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-sm-8 col-md-4">
@@ -71,8 +71,8 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Chaveiro de quadra</h5>
-                <p class="card-text">Essa camisa é mais do que uma peça de roupa. É um símbolo de esperança e transformação. Com a compra dessa camisa, você está ajudando a construir quadras comunitárias em áreas sem condições.</p>
-                <button><a href="cam-1.html"><div class="default-btn">
+                <p class="card-text">O chaveiro é um item simples, mas cheio de significado. Ele é feito de metal e possui uma estampa frontal com a frase, que representa o objetivo da ONG de construir quadras comunitárias para áreas sem condições.</p>
+                <button><a href="cha1.html"><div class="default-btn">
                     <span>Visualizar</span></div>
                   <div class="hover-btn">
                     <span>Comprar</span></div></a>
@@ -89,8 +89,8 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Chaveiro bola de basquete</h5>
-                <p class="card-text">O esporte é uma ferramenta poderosa de inclusão social. Ele promove a saúde, a educação e a cidadania. As quadras comunitárias são espaços essenciais para a prática esportiva, especialmente em áreas onde as crianças e jovens têm poucas oportunidades.</p>
-                <button><a href="cam-2.html"><div class="default-btn">
+                <p class="card-text">O chaveiro é um item que pode ser usado para expressar a sua personalidade e também para apoiar uma causa que você acredita. O chaveiro é uma ótima opção para quem quer fazer a diferença e ajudar a construir um futuro melhor para as crianças e adolescentes de comunidades carentes.</p>
+                <button><a href="cha2.html"><div class="default-btn">
                   <span>Visualizar</span></div>
                 <div class="hover-btn">
                   <span>Comprar</span></div></a>
@@ -100,7 +100,7 @@
           </div>
         </div>
       </div>    
-      <div class="row">
+      <div class="row mb-5">
         <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-sm-8 col-md-4">
@@ -109,8 +109,8 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Chaveiro de Vôlei</h5>
-                <p class="card-text">A sua camisa é mais do que uma camiseta. É um investimento no futuro de crianças e jovens de todo o Brasil. Ao comprar essa camisa, você está ajudando a construir um mundo mais justo e igualitário.</p>
-                <button><a href="cam-3.html"><div class="default-btn">
+                <p class="card-text">O chaveiro é um presente perfeito para quem quer demonstrar seu apoio a uma causa social. Ele é um item pequeno e discreto, mas que ainda ajuda a fazer o bem.</p>
+                <button><a href="cha3.html"><div class="default-btn">
                     <span>Visualizar</span></div>
                   <div class="hover-btn">
                     <span>Comprar</span></div></a>
@@ -127,8 +127,8 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Chaveiro, quadras e basquete</h5>
-                <p class="card-text">Abrace a causa da construção de quadras comunitárias e faça a diferença na vida de crianças e jovens de todo o Brasil. Compre a sua camisa "Construindo o futuro" e ajude a construir um mundo melhor.</p>
-                <button><a href="cam-4.html"><div class="default-btn">
+                <p class="card-text">Adquirindo um chaveiro, você está ajudando a construir um futuro melhor para as crianças e adolescentes de comunidades carentes. Junte-se a nós e faça a diferença!</p>
+                <button><a href="cha4.html"><div class="default-btn">
                   <span>Visualizar</span></div>
                 <div class="hover-btn">
                   <span>Comprar</span></div></a>
