--- a/pags/garrafa.html
+++ b/pags/garrafa.html
@@ -70,9 +70,9 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camiseta com quadras</h5>
-                <p class="card-text">Essa camisa é mais do que uma peça de roupa. É um símbolo de esperança e transformação. Com a compra dessa camisa, você está ajudando a construir quadras comunitárias em áreas sem condições.</p>
-                <button><a href="cam-1.html"><div class="default-btn">
+                <h5 class="card-title">Garrafa transparente</h5>
+                <p class="card-text">A garrafa é uma ótima opção para quem quer se hidratar com estilo e ainda apoiar uma causa social. Ela é uma garrafa reutilizável que ajuda a reduzir o consumo de plástico e ainda contribui para a construção de um futuro melhor para as crianças e adolescentes de comunidades carentes.</p>
+                <button><a href="garr1.html"><div class="default-btn">
                     <span>Visualizar</span></div>
                   <div class="hover-btn">
                     <span>Comprar</span></div></a>
@@ -88,9 +88,9 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camisa de basquete</h5>
-                <p class="card-text">O esporte é uma ferramenta poderosa de inclusão social. Ele promove a saúde, a educação e a cidadania. As quadras comunitárias são espaços essenciais para a prática esportiva, especialmente em áreas onde as crianças e jovens têm poucas oportunidades.</p>
-                <button><a href="cam-2.html"><div class="default-btn">
+                <h5 class="card-title">Garrafa de aluminio</h5>
+                <p class="card-text">A garrafa é um item prático e estiloso que também ajuda a fazer o bem. Ela é feita de alumínio 100%.</p>
+                <button><a href="garr2.html"><div class="default-btn">
                   <span>Visualizar</span></div>
                 <div class="hover-btn">
                   <span>Comprar</span></div></a>
@@ -108,9 +108,9 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camiseta de Vôlei</h5>
-                <p class="card-text">A sua camisa é mais do que uma camiseta. É um investimento no futuro de crianças e jovens de todo o Brasil. Ao comprar essa camisa, você está ajudando a construir um mundo mais justo e igualitário.</p>
-                <button><a href="cam-3.html"><div class="default-btn">
+                <h5 class="card-title">Garrafa de alumínio com quadra bege</h5>
+                <p class="card-text">A garrafa é um presente perfeito para quem quer demonstrar seu apoio a uma causa social. Ela é um item útil e bonito que ainda ajuda a fazer a diferença.</p>
+                <button><a href="garr3.html"><div class="default-btn">
                     <span>Visualizar</span></div>
                   <div class="hover-btn">
                     <span>Comprar</span></div></a>
@@ -126,9 +126,9 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camiseta de um time de vôlei</h5>
-                <p class="card-text">Abrace a causa da construção de quadras comunitárias e faça a diferença na vida de crianças e jovens de todo o Brasil. Compre a sua camisa "Construindo o futuro" e ajude a construir um mundo melhor.</p>
-                <button><a href="cam-4.html"><div class="default-btn">
+                <h5 class="card-title">Garrafa de alumínio amarelo</h5>
+                <p class="card-text">Adquirindo uma garrafa, você está ajudando a construir um futuro melhor para as crianças e adolescentes de comunidades carentes. Junte-se a nós e faça a diferença!</p>
+                <button><a href="garr4.html"><div class="default-btn">
                   <span>Visualizar</span></div>
                 <div class="hover-btn">
                   <span>Comprar</span></div></a>
