--- a/pags/blusa.html
+++ b/pags/blusa.html
@@ -62,7 +62,7 @@
       </div>
     
     <div class="container mb-5">
-      <div class="row">
+      <div class="row mb-2">
         <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-sm-8 col-md-4">
@@ -100,7 +100,7 @@
           </div>
         </div>
       </div>    
-      <div class="row">
+      <div class="row mb-2">
         <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-sm-8 col-md-4">
