--- a/pags/bone.html
+++ b/pags/bone.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
 		<meta name="keywords" content="ONG, esportes, ARGV, PE, Empreendedorismo, Praticas de Empreendedorismo, Vinicius Porto.">
 		<meta name="description" content="Uma ONG com o intuito de elevar o nível de conhecimento e profissionalismo na área dos esportes, alcançar o nível técnico perdido com o passar do tempo, abrir portas para aqueles com potencial e para os que não tem muitas condições de ir além.">
-    <link rel="shortcut icon" href="img/Logo-de-PE.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/Logo-de-PE.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
     <title>ARGV | Loja | Bonés</title>
@@ -61,18 +61,18 @@
         </div>
       </div>
     
-    <div class="container mb-5">
-      <div class="row">
-        <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
+    <div class="container mb-5" style="position:var();">
+      <div class="row mb-5">
+        <div class="card mb-5 mr-4 mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-sm-8 col-md-4">
               <img src="../img/bone1.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camiseta com quadras</h5>
-                <p class="card-text">Essa camisa é mais do que uma peça de roupa. É um símbolo de esperança e transformação. Com a compra dessa camisa, você está ajudando a construir quadras comunitárias em áreas sem condições.</p>
-                <button><a href="cam-1.html"><div class="default-btn">
+                <h5 class="card-title">Boné de Voleibol</h5>
+                <p class="card-text">O boné é uma peça essencial para quem quer apoiar uma causa nobre e ainda ficar estiloso. Ele é feito de algodão 100% e possui um design moderno e confortável.</p>
+                <button><a href="bone1.html"><div class="default-btn">
                     <span>Visualizar</span></div>
                   <div class="hover-btn">
                     <span>Comprar</span></div></a>
@@ -81,16 +81,16 @@
             </div>
           </div>
         </div>
-        <div class="card mb-3  mt-3" style="max-width: 540px;">
+        <div class="card mb-5  mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="../img/bone2.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camisa de basquete</h5>
-                <p class="card-text">O esporte é uma ferramenta poderosa de inclusão social. Ele promove a saúde, a educação e a cidadania. As quadras comunitárias são espaços essenciais para a prática esportiva, especialmente em áreas onde as crianças e jovens têm poucas oportunidades.</p>
-                <button><a href="cam-2.html"><div class="default-btn">
+                <h5 class="card-title">Boné bege</h5>
+                <p class="card-text">O boné é um acessório que pode ser usado para expressar a sua personalidade e também para apoiar uma causa que você acredita.</p>
+                <button><a href="bone2.html"><div class="default-btn">
                   <span>Visualizar</span></div>
                 <div class="hover-btn">
                   <span>Comprar</span></div></a>
@@ -100,17 +100,17 @@
           </div>
         </div>
       </div>    
-      <div class="row">
-        <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
+      <div class="row mb-5">
+        <div class="card mb-5 mr-4 mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-sm-8 col-md-4">
               <img src="../img/bone3.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camiseta de Vôlei</h5>
-                <p class="card-text">A sua camisa é mais do que uma camiseta. É um investimento no futuro de crianças e jovens de todo o Brasil. Ao comprar essa camisa, você está ajudando a construir um mundo mais justo e igualitário.</p>
-                <button><a href="cam-3.html"><div class="default-btn">
+                <h5 class="card-title">Boné de volei</h5>
+                <p class="card-text">O boné é um presente perfeito para quem quer demonstrar seu apoio a uma causa social. Ele é um item estiloso e funcional que ainda ajuda a fazer o bem.</p>
+                <button><a href="bone3.html"><div class="default-btn">
                     <span>Visualizar</span></div>
                   <div class="hover-btn">
                     <span>Comprar</span></div></a>
@@ -119,7 +119,7 @@
             </div>
           </div>
         </div>
-        <div class="card mb-3 mt-3" style="max-width: 540px;">
+        <div class="card mb-5 mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="../img/bone4.jpg" class="img-fluid rounded-start" alt="...">
@@ -127,8 +127,8 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Camiseta de um time de vôlei</h5>
-                <p class="card-text">Abrace a causa da construção de quadras comunitárias e faça a diferença na vida de crianças e jovens de todo o Brasil. Compre a sua camisa "Construindo o futuro" e ajude a construir um mundo melhor.</p>
-                <button><a href="cam-4.html"><div class="default-btn">
+                <p class="card-text">Adquirindo um boné, você está ajudando a construir um futuro melhor para as crianças e adolescentes de comunidades carentes. Junte-se a nós e faça a diferença!</p>
+                <button><a href="bone4.html"><div class="default-btn">
                   <span>Visualizar</span></div>
                 <div class="hover-btn">
                   <span>Comprar</span></div></a>
@@ -150,8 +150,8 @@
           </div>
           <div style="color: whitesmoke;" class="col-lg-12">
             <ul class="container-fluid list-inline text-center">
-              <li class="list-inline-item"><a href="contato.html">Sobre</a></li>
-              <li class="list-inline-item"><a href="contato.html">Contato</a></li>
+              <li class="list-inline-item"><a href="../contato.html">Sobre</a></li>
+              <li class="list-inline-item"><a href="../contato.html">Contato</a></li>
               <li class="list-inline-item"><a href="">Termos de uso</a></li>
               <li class="list-inline-item"><a href="">Política de privacidade</a></li>
             </ul>
