Adicionando o home e arrummando linkagem

--- a/loja.html
+++ b/loja.html
@@ -57,7 +57,6 @@
           <a class="nav-link" href="pags/bone.html">Bonés</a>
           <a class="nav-link" href="pags/chaveiro.html">Chaveiros</a>
           <a class="nav-link" href="pags/garrafa.html">Garrafas</a>
-          <a class="nav-link" href="pags/">COISAS</a>
         </div>
       </div>
     
@@ -66,13 +65,13 @@
         <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-sm-8 col-md-4">
-              <img src="img/Imagem do WhatsApp de 2023-11-06 à(s) 12.00.33_1efb5524.jpg" class="img-fluid rounded-start" alt="...">
+              <img src="img/garr3.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camiseta com quadras</h5>
-                <p class="card-text">Essa camisa é mais do que uma peça de roupa. É um símbolo de esperança e transformação. Com a compra dessa camisa, você está ajudando a construir quadras comunitárias em áreas sem condições.</p>
-                <button><a href="pags/cam-1.html"><div class="default-btn">
+                <h5 class="card-title">Garrafa de alumínio com quadra bege</h5>
+                <p class="card-text">A garrafa é um presente perfeito para quem quer demonstrar seu apoio a uma causa social. Ela é um item útil e bonito que ainda ajuda a fazer a diferença.</p>
+                <button><a href="pags/garr3.html"><div class="default-btn">
                     <span>Visualizar</span></div>
                   <div class="hover-btn">
                     <span>Comprar</span></div></a>
@@ -84,13 +83,13 @@
         <div class="card mb-3  mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="img/Imagem do WhatsApp de 2023-11-06 à(s) 12.00.58_760dfd3d.jpg" class="img-fluid rounded-start" alt="...">
+              <img src="img/cha2.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camisa de basquete</h5>
-                <p class="card-text">O esporte é uma ferramenta poderosa de inclusão social. Ele promove a saúde, a educação e a cidadania. As quadras comunitárias são espaços essenciais para a prática esportiva, especialmente em áreas onde as crianças e jovens têm poucas oportunidades.</p>
-                <button><a href="cam-2"><div class="default-btn">
+                <h5 class="card-title">Chaveiro bola de basquete</h5>
+                <p class="card-text">O chaveiro é um item que pode ser usado para expressar a sua personalidade e também para apoiar uma causa que você acredita. O chaveiro é uma ótima opção para quem quer fazer a diferença e ajudar a construir um futuro melhor para as crianças e adolescentes de comunidades carentes.</p>
+                <button><a href="pags/cha2.html"><div class="default-btn">
                   <span>Visualizar</span></div>
                 <div class="hover-btn">
                   <span>Comprar</span></div></a>
@@ -104,13 +103,13 @@
         <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-sm-8 col-md-4">
-              <img src="img/Imagem do WhatsApp de 2023-11-06 à(s) 12.00.58_a31eb86a.jpg" class="img-fluid rounded-start" alt="...">
+              <img src="img/cha3.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camiseta de Vôlei</h5>
-                <p class="card-text">A sua camisa é mais do que uma camiseta. É um investimento no futuro de crianças e jovens de todo o Brasil. Ao comprar essa camisa, você está ajudando a construir um mundo mais justo e igualitário.</p>
-                <button><a href="cam-3"><div class="default-btn">
+                <h5 class="card-title">Chaveiro de Vôlei</h5>
+                <p class="card-text">O chaveiro é um presente perfeito para quem quer demonstrar seu apoio a uma causa social. Ele é um item pequeno e discreto, mas que ainda ajuda a fazer o bem.</p>
+                <button><a href="pags/cha3.html"><div class="default-btn">
                     <span>Visualizar</span></div>
                   <div class="hover-btn">
                     <span>Comprar</span></div></a>
@@ -122,13 +121,13 @@
         <div class="card mb-3 mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="img/Imagem do WhatsApp de 2023-11-06 à(s) 12.13.50_5fa7ddc7.jpg" class="img-fluid rounded-start" alt="...">
+              <img src="img/garr2.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camiseta de um time de vôlei</h5>
-                <p class="card-text">Abrace a causa da construção de quadras comunitárias e faça a diferença na vida de crianças e jovens de todo o Brasil. Compre a sua camisa "Construindo o futuro" e ajude a construir um mundo melhor.</p>
-                <button><a href="cam-4"><div class="default-btn">
+                <h5 class="card-title">Garrafa de aluminio</h5>
+                <p class="card-text">A garrafa é um item prático e estiloso que também ajuda a fazer o bem. Ela é feita de alumínio 100%.</p>
+                <button><a href="pags/garr2.html"><div class="default-btn">
                   <span>Visualizar</span></div>
                 <div class="hover-btn">
                   <span>Comprar</span></div></a>
