--- a/pags/cha2.html
+++ b/pags/cha2.html
@@ -55,7 +55,6 @@
           <a class="nav-link" href="bone.html">Bonés</a>
           <a class="nav-link active" href="chaveiro.html">Chaveiros</a>
           <a class="nav-link" href="garrafa.html">Garrafas</a>
-          <a class="nav-link" href="">COISAS</a>
         </div>
       </div>
     <div class="col-md-9 col-sm-11">
@@ -115,8 +114,8 @@
           </div>
           <div style="color: whitesmoke;" class="col-lg-12">
             <ul class="container-fluid list-inline text-center">
-              <li class="list-inline-item"><a href="contato.html">Sobre</a></li>
-              <li class="list-inline-item"><a href="contato.html">Contato</a></li>
+              <li class="list-inline-item"><a href="../contato.html">Sobre</a></li>
+              <li class="list-inline-item"><a href="../contato.html">Contato</a></li>
               <li class="list-inline-item"><a href="">Termos de uso</a></li>
               <li class="list-inline-item"><a href="">Política de privacidade</a></li>
             </ul>
