--- a/pags/blu4.html
+++ b/pags/blu4.html
@@ -71,13 +71,13 @@
           <div class="col-md-6">
     
             <h1 class="">Blusa com ziper</h1>
-            <p class="lead">Blusa unissex, de , com ziper.</p>
+            <p class="lead">Blusa unissex, de 90% poliéster e 10% spandex, com ziper.</p>
             <p class="mb-4">
               Tamanhos: P, M, G, GG
               Cores: Azul e Branco.
             </p>
             <div class="alert alert-success col-7" role="alert">
-              Preço: R$ 100.00
+              Preço: R$ 159,99
             </div>
     
             <div class="row">
