--- a/loja.html
+++ b/loja.html
@@ -49,7 +49,7 @@
         </div>
     </nav>
     <div class="row">
-      <div class="col-2" style="height: 725px;">
+      <div class="col-sm-2 col-md-2">
         <div class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
           <a class="nav-link active" href="loja.html">Home</a>
           <a class="nav-link" href="pags/camiseta.html">Camisetas</a>
@@ -59,8 +59,7 @@
           <a class="nav-link" href="pags/garrafa.html">Garrafas</a>
         </div>
       </div>
-    
-    <div class="container">
+    <div class="container col-md-9 col-sm-11">
       <div class="row">
         <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
           <div class="row g-0">
